<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_page_color">

    <RelativeLayout
        android:id="@id/_title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@android:color/white" >

        <LinearLayout
            android:id="@id/_title_left"
            android:layout_width="@dimen/title_left_width"
            android:layout_height="match_parent"
            android:background="@drawable/title_button_bg"
            android:clickable="true"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@null"
                android:paddingLeft="15dp"
                android:scaleType="centerInside"
                android:src="@drawable/new_title_left" />
        </LinearLayout>

        <TextView
            android:id="@id/_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textAppearance="@style/s_title_text" />

        <include layout="@layout/cart_title" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_alignParentBottom="true"
            android:background="@color/s_title_button_bg_color" />
    </RelativeLayout>

    <com.citywithincity.widget.StateScrollView
        android:id="@id/_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_container"
        android:layout_below="@id/_title_bar"
        android:layout_marginTop="1dp" >

        <include layout="@layout/s_card_detail_content" />
    </com.citywithincity.widget.StateScrollView>

    <LinearLayout
        android:id="@id/bottom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:padding="10dip" >

        <RelativeLayout
            android:id="@id/_id_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:clickable="true" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:drawablePadding="4dp"
                android:drawableTop="@drawable/s_card_share"
                android:gravity="center_horizontal"
                android:text="@string/card_share" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@id/id_collection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:clickable="true" >

            <TextView
                android:id="@id/_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:clickable="false"
                android:drawablePadding="4dp"
                android:drawableTop="@drawable/s_card_colletion"
                android:gravity="center_horizontal"
                android:text="@string/card_colletion" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@id/id_add_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:clickable="true" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:drawablePadding="4dp"
                android:drawableTop="@drawable/diy_shopcar"
                android:gravity="center_horizontal"
                android:text="@string/diy_add_shop_car" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2" >

            <Button
                android:id="@id/_id_ok"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dip"
                android:background="@drawable/s_btn_bg"
                android:text="@string/card_buy"
                android:textColor="@android:color/white" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>