<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_page_color"
    android:orientation="vertical">

    <include layout="@layout/s_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        android:padding="5dip" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical" >

            <android.support.v4.view.ViewPager
                android:id="@id/diy_view_pager"
                android:layout_width="match_parent"
                android:layout_height="200dip" >
            </android.support.v4.view.ViewPager>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="5dip"
                android:paddingTop="5dip"
                android:visibility="gone" >

                <View
                    android:id="@id/diy_detail_view1"
                    android:layout_width="14dip"
                    android:layout_height="4px"
                    android:background="@color/title_color" />

                <View
                    android:id="@id/diy_detail_view2"
                    android:layout_width="14dip"
                    android:layout_height="4px"
                    android:layout_marginLeft="10dip"
                    android:background="@color/s_title_bg_color" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:padding="15dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_diy_work_name"
            android:textSize="20sp" />

        <TextView
            android:id="@id/diy_work_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="自行车梦想"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_diy_work_author"
            android:textSize="15sp" />

        <TextView
            android:id="@id/diy_work_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="小瓦"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:padding="15dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_diy_work_date"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/diy_work_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>